converted index.php to index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
-<?php
-session_start(); // Start the session
-
-// Check if the user is logged in
-if (isset($_SESSION["userId"])) {
-    // The user is logged in
-    $userId = $_SESSION["userId"];
-
-    
-}
 
 
-echo'
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -159,7 +149,7 @@ echo'
             </div>
         </div>
         </form>
-         Search End -->
+        
 
 
         <!-- Category Start -->
@@ -445,5 +435,4 @@ echo'
     <script src="js/main.js"></script>
 </body>
 
-</html>';
-?>
+</html>
