--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h1 class="heading-secondary">RealRoots</h1>
                 <h3 style="text-align: center" class="heading-secondary">Where Dreams find Home</h2>
                 <h2 style="text-align: center" class="heading-secondary">Sign Up</h2>
-                <form method="post" action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
+                <form  action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
 
                     <!-- Signup form fields here -->
                      <!-- Signup form fields here -->
