--- a/login.html
+++ b/login.html
@@ -123,7 +123,7 @@
                     </div>
                     <button type="submit" class="btn btn--green" name="login">Login</button>
                 </form>
-                <p style="background-color: white" class="card__toggle">';echo"Don't have an account? ";echo'<span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/signup.php">Sign Up</span></p>
+                <p style="background-color: white" class="card__toggle">"Don't have an account? "<span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/index.html">Sign Up</span></p>
                 <br>
                 <p style="background-color: white" class="card__toggle">Are you an admin? <span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/adminlogin.php">Login</a></span></p>
 
