--- a/login.html
+++ b/login.html
@@ -99,7 +99,7 @@
                 <h1 class="heading-secondary">RealRoots</h1>
                 <h3 style="text-align: center" class="heading-secondary">Where Dreams find Home</h2>
                 <h2 style="text-align: center" class="heading-secondary">Login</h2>
-                <form  action="javascript:void(0);" class="form" onsubmit="redirectToHomePage()">
+                <form  action="javascript:void(0);" class="form" onsubmit="redirectToMainPage()">
                     <!-- Signup form fields here -->
                      <!-- Signup form fields here -->
                     <!-- Login form fields here -->
@@ -131,7 +131,7 @@
         
     </div>
     <script>
-        function redirectToHomePage() {
+        function redirectToMainPage() {
             // Redirect to main_project.html
             window.location.href = 'main_project.html';
             
