php html separate

--- a/testimonial.html
+++ b/testimonial.html
@@ -45,7 +45,7 @@
         <!-- Navbar Start -->
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
-                <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
+                <a href="main_project.html" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
                         <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 30px; height: 30px;">
                     </div>
@@ -56,23 +56,23 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="index.php" class="nav-item nav-link active">Home</a>
+                        <a href="main_project.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="property-list.php" class="dropdown-item">Property List</a>
-                                <a href="property-type.php" class="dropdown-item">Property Type</a>
-                                <a href="property-agent.php" class="dropdown-item">Property Agent</a>
+                                <a href="property-list.html" class="dropdown-item">Property List</a>
+                                <a href="property-type.html" class="dropdown-item">Property Type</a>
+                                <a href="property-agent.html" class="dropdown-item">Property Agent</a>
                             </div>
                         </div>
                     
                         <a href="testimonial.html" class="nav-item nav-link">Reviews</a>
-                        <a href="contact.php" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                         <li class="nav-item">
-                            <form method="post" action="logout.php">
-                            <button style="border:none " type="submit" class="nav-item nav-link" name="logout">Logout</button>
-                            </form>
+                            <form method="post" action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
+                                <button style="border:none " type="submit" class="nav-item nav-link" name="logout">Logout</button>
+                                </form>
                             </li>
                     </div>
                 </div>
@@ -249,6 +249,13 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script>
+        function redirectToLoginPage() {
+            // Redirect to login.html
+            window.location.href = 'login.html';
+        }
+    </script>
+    
 </body>
 
 </html>
