--- a/property-list.html
+++ b/property-list.html
@@ -71,7 +71,7 @@
                             <a href="testimonial.html" class="nav-item nav-link">Reviews</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                             <li class="nav-item">
-                        <form method="post" action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
+                        <form  action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
                         <button style="border:none " type="submit" class="nav-item nav-link" name="logout">Logout</button>
                         </form>
                         </li>
