--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
                     
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
-                            <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                            <p class="mb-4">The contact form is currently inactive as it uses ajax and php</p>
                             <form>
                                 <div class="row g-3">
                                     <div class="col-md-6">
