--- a/contact.html
+++ b/contact.html
@@ -156,10 +156,45 @@
                     
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
-                            
+                           <div class="container-fluid nav-bar bg-transparent">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
+        <a href="main_project.html" class="navbar-brand d-flex align-items-center text-center">
+            <div class="icon p-2 me-2">
+                <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 30px; height: 30px;">
+            </div>
+            <h1 class="m-0 text-primary">RealRoots</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto">
+                <a href="main_project.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
+                    <div class="dropdown-menu rounded-0 m-0">
+                        <a href="property-list.html" class="dropdown-item">Property List</a>
+                        <a href="property-type.html" class="dropdown-item">Property Type</a>
+                        <a href="property-agent.html" class="dropdown-item">Property Agent</a>
+                    </div>
+                </div>
+                <a href="testimonial.html" class="nav-item nav-link">Reviews</a>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <li class="nav-item">
+                    <form action="javascript:void(0);" class="form" onsubmit="redirectToLoginPage()">
+                        <button style="border:none " type="submit" class="nav-item nav-link" name="logout">Logout</button>
+                    </form>
+                </li>
+            </div>
+        </div>
+    </nav>
+</div>
+ 
                             <form>
                                 <div class="row g-3">
                                     <div class="col-md-6">
+                                        <p>The contac tform is inactive as it uses php </p>
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="name" placeholder="Your Name">
                                             <label for="name">Property ID</label>
