--- a/main_project.html
+++ b/main_project.html
@@ -90,7 +90,7 @@
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
                     <h1 class="display-5 animated fadeIn mb-4">Where Dreams find A <span class="text-primary">Home</span> </h1>
-                    <p class="animated fadeIn mb-4 pb-2">Discover the ideal residence for your';echo" family's comfort and uncover the ultimate dwelling place that perfectly suits your family's needs and preferences.</p>";
+                    <p class="animated fadeIn mb-4 pb-2">Discover the ideal residence for your family's comfort and uncover the ultimate dwelling place that perfectly suits your family's needs and preferences.</p>";
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
