--- a/property-list.html
+++ b/property-list.html
@@ -190,6 +190,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
                                
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <div class="row g-4">
