--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="main_project.html"nav-item nav-link active">Home</a>
+                        <a href="main_project.html"nav-item nav-link active>Home</a>
                         <a href="about.html" class="nav-item nav-link active">About</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
