--- a/property-type.html
+++ b/property-type.html
@@ -512,58 +512,58 @@
             // Event handler for clicking the "For Sell" tab
             $("#tab-1-link").click(function () {
                 $("#apartment").show();
-                $("society").hide();
-                $("building").hide();
-                $("home").hide();
-                $("office").hide();
-                $("shop").hide();
+                $("#society").hide();
+                $("#building").hide();
+                $("#home").hide();
+                $("#office").hide();
+                $("#shop").hide();
 
             });
     
             // Event handler for clicking the "For Rent" tab
             $("#tab-2-link").click(function () {
                 $("#apartment").hide();
-                $("society").show();
-                $("building").hide();
-                $("home").hide();
-                $("office").hide();
-                $("shop").hide();
+                $("#society").show();
+                $("#building").hide();
+                $("#home").hide();
+                $("#office").hide();
+                $("#shop").hide();
 
             });
             $("#tab-3-link").click(function () {
                 $("#apartment").hide();
-                $("society").hide();
-                $("building").show();
-                $("home").hide();
-                $("office").hide();
-                $("shop").hide();
+                $("#society").hide();
+                $("#building").show();
+                $("#home").hide();
+                $("#office").hide();
+                $("#shop").hide();
 
             });
             $("#tab-4-link").click(function () {
                 $("#apartment").hide();
-                $("society").hide();
-                $("building").hide();
-                $("home").show();
-                $("office").hide();
-                $("shop").hide();
+                $("#society").hide();
+                $("#building").hide();
+                $("#home").show();
+                $("#office").hide();
+                $("#shop").hide();
 
             });
             $("#tab-5-link").click(function () {
                 $("#apartment").hide();
-                $("society").hide();
-                $("building").hide();
-                $("home").hide();
-                $("office").show();
-                $("shop").hide();
+                $("#society").hide();
+                $("#building").hide();
+                $("#home").hide();
+                $("#office").show();
+                $("#shop").hide();
 
             });
             $("#tab-6-link").click(function () {
                 $("#apartment").hide();
-                $("society").hide();
-                $("building").hide();
-                $("home").hide();
-                $("office").hide();
-                $("shop").show();
+                $("#society").hide();
+                $("#building").hide();
+                $("#home").hide();
+                $("#office").hide();
+                $("#shop").show();
 
             });
 
