--- a/property-list.html
+++ b/property-list.html
@@ -142,7 +142,7 @@
                                         </div>
                                         <div class="p-4 pb-0">
                                             <h5 class="text-primary mb-3">Rs.90,00,000</h5>
-                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
+                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Sell </a>
                                             <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street,Bengaluru, India</p>
                                         </div>
                                         <div class="d-flex border-top">
@@ -204,7 +204,7 @@
                                         </div>
                                         <div class="p-4 pb-0">
                                             <h5 class="text-primary mb-3">Rs12,34,000</h5>
-                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
+                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Rent</a>
                                             <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, Mumbai,India</p>
                                         </div>
                                         <div class="d-flex border-top">
@@ -223,7 +223,7 @@
                                         </div>
                                         <div class="p-4 pb-0">
                                             <h5 class="text-primary mb-3">Rs.30,000</h5>
-                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
+                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Rent</a>
                                             <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, Bengaluru,India</p>
                                         </div>
                                         <div class="d-flex border-top">
@@ -242,7 +242,7 @@
                                         </div>
                                         <div class="p-4 pb-0">
                                             <h5 class="text-primary mb-3">Rs12,000</h5>
-                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
+                                            <a class="d-block h5 mb-2" href="">Golden Urban House For Rent</a>
                                             <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, Kolkata, India</p>
                                         </div>
                                         <div class="d-flex border-top">
