--- a/main_project.html
+++ b/main_project.html
@@ -197,7 +197,7 @@
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                         <h1 class="mb-4">#1 Place To Find The Perfect Property</h1>
                         <p class="mb-4">Unearth the ideal property that matches your aspirations at the top-rated destination for real estate seekers.';echo" Whether you're in search of a cozy family residence or an investment opportunity, our platform is your go-to resource for finding the perfect property.</p>
-                        ";echo'<p><i class="fa fa-check text-primary me-3"></i>One on One Assisstance</p>
+                        <p><i class="fa fa-check text-primary me-3"></i>One on One Assisstance</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Vast Property Selection</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Timely Updates</p>
                         <a class="btn btn-primary py-3 px-5 mt-3" href="about.html">Read More</a>
@@ -249,7 +249,7 @@
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">
-                            <p>"Exceptional service! Our agent went above and beyond to find us our dream home.';echo" We couldn't be happier with the";echo' result."</p>
+                            <p>"Exceptional service! Our agent went above and beyond to find us our dream home.We couldn't be happier with the result."</p>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 45px; height: 45px;">
                                 <div class="ps-3">
@@ -261,7 +261,7 @@
                     </div>
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">';echo'
-                            <p>"The ';echo"team's expertise and professionalism made selling our property a breeze. They made the process smooth and ";echo'stress-free."</p>
+                            <p>"The team's expertise and professionalism made selling our property a breeze. They made the process smooth and stress-free."</p>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 45px; height: 45px;">
                                 <div class="ps-3">
