--- a/main_project.html
+++ b/main_project.html
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-3">
-                        <div class="bg-white border rounded p-4">';echo'
+                        <div class="bg-white border rounded p-4">
                             <p>"The team's expertise and professionalism made selling our property a breeze. They made the process smooth and stress-free."</p>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 45px; height: 45px;">
