--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     
                     
                 </form>
-                <p style="background-color:white "class="card__toggle">Already have an account? <span id="toggle-login"><a href="http://localhost/project/real-estate-html-template/login.php">Login</span></p>
+                <p style="background-color:white "class="card__toggle">Already have an account? <span id="toggle-login"><a href="http://localhost/project/real-estate-html-template/login.html">Login</span></p>
             </div>
         </div>
         <script>
