--- a/login.html
+++ b/login.html
@@ -125,7 +125,7 @@
                 </form>
                 <p style="background-color: white" class="card__toggle">"Don't have an account? "<span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/index.html">Sign Up</span></p>
                 <br>
-                <p style="background-color: white" class="card__toggle">Are you an admin? <span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/adminlogin.php">Login</a></span></p>
+                <!--<p style="background-color: white" class="card__toggle">Are you an admin? <span id="toggle-signup"><a href="http://localhost/project/real-estate-html-template/adminlogin.html">Login</a></span></p>-->
 
             
         
